feat(volume): mount volumes into containers at deploy time
Volume is now service-scoped with a container mount path:
- t_volume gains service_id + mount_path; duplicate check and list are
  per-service; ServiceVo volumes are filled per service instead of sharing
  the whole stack's volumes.
- Deploy: for each service, ensure its Docker named volumes exist
  (vanilla-{stackId}-{serviceId}-{volumeName}, size as driver opt, created
  idempotently), then bind them via HostConfig.withBinds into the same
  HostConfig as ports/resources. Volumes mount at the declared path in
  every replica.

Adds buildVolumeBinds unit tests. Schema updated in vanilla.sql.